<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="#ffff9c2e"
              android:paddingTop="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
        android:layout_alignParentTop="true"
        android:id="@+id/ivRepoOwnerPic"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_launcher"
        android:layout_width="75dp"
        android:layout_height="75dp"
         />
    <TableLayout
        android:id="@+id/tlRepoInfo"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/ivRepoOwnerPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/tvRepoName"
                android:text="@string/repo_inf"
                android:textStyle="bold"
                android:layout_span="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />
        </TableRow>


        <TableRow>
            <TextView
                android:paddingRight="5dp"
                android:text="@string/repo_owner"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvRepoOwner"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:paddingRight="5dp"
                android:text="@string/repo_created"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/created" />

            <TextView
                android:id="@+id/tvRepoDateCreated"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>
            <TextView
                android:paddingRight="5dp"
                android:text="@string/repo_pushed"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvrefresh" />
            <TextView
                android:id="@+id/tvRepoDatePushed"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>



    <LinearLayout android:orientation="horizontal"
                  android:background="#ffffe13d"
                  android:layout_marginTop="5dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/tlRepoInfo" >

        <TextView
            android:layout_height="25dp"
            android:text="@string/th_commitlist_commit"
            android:paddingLeft="@dimen/activity_horizontal_margin_smallen"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_width="@dimen/commit_list_hash" />
        <TextView
            android:text="@string/th_commitlist_descr"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:maxLines="3"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/th_commitlist_author"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:layout_width="@dimen/commit_list_author"/>
        <TextView
            android:text="@string/th_commitlist_date"
            android:layout_marginTop="5dp"
            android:layout_height="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="@dimen/activity_horizontal_margin_smallen"
            android:textColor="#000000"
            android:layout_width="@dimen/commit_list_date"/>

    </LinearLayout>

</RelativeLayout>
