<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/liner_main"
    android:background="#fffbfffd">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/login"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_login"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:id="@+id/logIn_btn"
            android:layout_gravity="center_horizontal"
            android:background="#ffff9239" />

    </LinearLayout>

</LinearLayout>